# smart_watch

./: .gitignore  README.md  README_COMPILER.md  SMA_BLE_PROTOCOL.md  bincompare.py  comp_decomp.py  devices_supported.csv  hk89_dial_tool.py  hkcomposer.py  hkcomposer2.py  hkcomposer_enhanced_v2.py  hkdecomp.c  hkdecomp.py  hkdecomp_backup.c  hkdecomp_enhanced.py  hkdecomp_enhanced_v2.py  hkdecomp_new.py  hkdecomp_refactored.py  index.html  requirements.txt  smartwatch_face_compiler.py  test_enhanced_config.json
.github/workflows/: android-release.yml  build-apk.yml  designer-desktop-release.yml  designer-pages-deploy.yml
assets/: index-Be2ZdE-X.js  index-DEjq6PT3.js  index-DSeZqpwg.css  index-nbBY8_id.js
decompiled_apk/resources/: AndroidManifest.xml  play-services-fitness.properties
dial-designer/: index.html  package-lock.json  package.json  test_compile.cjs  test_pyodide_compile.cjs
dial-designer/src-tauri/: Cargo.toml  tauri.conf.json
dial-designer/src-tauri/icons/: icon.icns
dial-sender/: FINAL_ANALYSIS_AND_IMPLEMENTATION.md  FINDINGS.md  INGENIERIA_INVERSA_AVANCES.md  README.md  README_V3.1_FIX.txt  README_V3.2_RELEASE.md  build.gradle  gradle.properties  settings.gradle
docs/: DIAL_FORMAT_GUIDE.md  JPEG_BACKGROUND_GUIDE.md  README.md  SMA_BLE_PROTOCOL.md  SUMMARY_JPG_FIX.md  log.txt
hkcomposer-1.9.6-linux/: block_type.txt  hkcomposer
hkdecomp-1.8-linux/: hkdecomp
output_enhanced_v2/: dial_enhanced.json  dialzz_style.json
presets/: manifest.json
reverse_engeneri/: angr.c  binaryninja  ghidra  hex-rays
tests/: test_decompress.py
(+63008 files in other folders)
